fix drawer behind app bar

--- a/web/src/components/browse-equities/osm-map.css
+++ b/web/src/components/browse-equities/osm-map.css
@@ -1,13 +1,13 @@
 .ol-zoom {
     position: fixed;
-    top: 80px;
+    top: 50%;
     right: 16px;
     width: 12px;
 }
 
 .ol-rotate {
     position: fixed;
-    top: 130px;
+    top: calc(50% + 50px);
     right: 16px;
     width: 12px;
 }
